# updated algorithm for calculating overlap coefficient